crates/parse/src/tests/snapshots/call_bad_4.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- a(b b)
- Err:
    - message: "Expecting `,` or `CloseParen` in function call argument list. Got `b`"
      line: 1
      column: 3
- "Expecting `,` or `CloseParen` in function call argument list. Got `b` at 1:3"

