crates/parse/src/tests/snapshots/call_nullary.snap
---
source: crates/parse/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- a()
- Ok:
    nodes:
      - kind:
          Call:
            name: a
            args: []
            ty: ~
- (a)

