crates/parse/src/tests/snapshots/char_basic.snap
---
source: crates/parse/src/tests.rs
assertion_line: 81
expression: "(test[1], ast, ast_string)"
---
- "let c: char = 'a'"
- Ok:
    nodes:
      - kind:
          Let:
            name: c
            antn: Char
            init:
              kind:
                Lit:
                  value:
                    Char: 97
                  ty: ~
- "(let c:char a)"

