crates/parse/src/tests/snapshots/for_bad_3.snap
---
source: crates/parse/src/tests.rs
assertion_line: 101
expression: "(test[1], ast, ast_string)"
---
- "for a:"
- Err:
    message: "Expecting type annotation in `for`. Got `EOF`"
    line: 0
    column: 0
- "Expecting type annotation in `for`. Got `EOF`"

