crates/parse/src/tests/snapshots/for_bad_5.snap
---
source: crates/parse/src/tests.rs
assertion_line: 101
expression: "(test[1], ast, ast_string)"
---
- "for a: int ="
- Err:
    message: Premature end of expression
    line: 0
    column: 0
- Premature end of expression

